--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,8 @@
 *.class
 *.log
-.idea/.name
-.idea/sbt.xml
-.idea/libraries/
-.idea/misc.xml
-.idea/modules/
-.idea/workspace.xml
+.idea
 project/build.properties
 project/project/
-project/target/
 src/main/resources/
 src/main/scala/com/akkagame/actor/
 src/main/scala/com/akkagame/service/
