--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ src/main/resources/
 target/
 src/test/resources/
 project/build.properties
+/.idea/sbt.xml
+/.idea/scala_compiler.xml
+/.idea/.name
+/.idea/
+/.idea/libraries/
+/.idea/hydra.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
+/.idea/uiDesigner.xml
+/.idea/workspace.xml
+/.idea/modules/
